--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,42 +1,78 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  /* Light Mode */
+  body {
+    @apply bg-white text-gray-500 relative;
+  }
+
+  /* Dark Mode */
+  body.dark {
+    @apply bg-slate-900 text-white relative;
+  }
+
+  input {
+    @apply px-4 py-2 bg-slate-600 rounded-xl;
+  }
+  .modal {
+    z-index: 9999; /* Diğer öğelerin önünde görünmesini sağlar */
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+@layer components {
+  /* Header */
+  .header {
+    @apply p-6 bg-white dark:bg-red-800 shadow-md;
+  }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  .header-text {
+    @apply text-gray-900 dark:text-gray-100;
+  }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+  /* Profile Image border */
+  .profile-image-border {
+    @apply border-2 border-gray-300 dark:border-red-600;
+  }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+  button {
+    @apply px-4 py-2 text-sm font-medium rounded-lg transition-all duration-150 ease-in-out transform hover:scale-105 active:scale-95;
+  }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  /* Primary Button (Red) */
+  .btn {
+    @apply self-start text-white bg-red-500 hover:bg-red-600 active:bg-red-700 focus:ring-red-500 shadow-md;
+  }
+
+  /* Primary Dark Button (Alternative) */
+  .btn-primary {
+    @apply text-white bg-gray-900 hover:bg-gray-800 active:bg-gray-700 focus:ring-gray-500 shadow-sm;
+  }
+
+  /* Outline Button */
+  .btn-outline {
+    @apply bg-transparent border border-gray-700 text-gray-800 hover:bg-gray-800 hover:text-white active:bg-gray-900 focus:ring-gray-700;
+  }
+
+  /* Ghost Button */
+  .btn-ghost {
+    @apply bg-transparent text-gray-800 hover:bg-gray-700 active:bg-gray-200 focus:ring-gray-300;
+  }
+
+  .stats-icon {
+    @apply text-2xl hover:text-gray-600 dark:hover:text-red-300 cursor-pointer transition-all;
+  }
+
+  .sign-out-btn {
+    @apply px-6 py-2 text-sm capitalize rounded-xl bg-red-500 text-white hover:bg-red-600 transition-all;
+  }
+
+  .toggle-btn {
+    @apply flex items-center justify-center w-12 h-12 bg-gray-200 dark:bg-gray-600 rounded-full text-gray-800 dark:text-gray-200 hover:scale-110 transition-transform;
+  }
+
+  .input-group {
+    @apply flex flex-col gap-4;
   }
 }
